@@ -31,6 +31,7 @@
  */
 #define OUT123_API_VERSION @OUTAPI_VERSION@
 
+#ifndef MPG123_EXPORT
 /** Defines needed for MS Visual Studio(tm) DLL builds.
  * Every public function must be prefixed with MPG123_EXPORT. When building 
  * the DLL ensure to define BUILD_MPG123_DLL. This makes the function accessible
@@ -48,6 +49,7 @@
 #else
 /* Nothing on normal/UNIX builds */
 #define MPG123_EXPORT
+#endif
 #endif
 #endif
 
